--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,15 @@
 baseURL: https://eternity.bora.sh # todo: change site url.
-title: Eternity # todo: change site name.
+title: Perly Web # todo: change site name.
 defaultContentLanguage: 'en'
 theme: eternity
 googleAnalytics: '' # todo: set your analytics id.
 
 params:
   image: /images/banner.png
-  logo: logo.png # todo: add your custom logo to static/
+  logo: ED_logo.png # todo: add your custom logo to static/
   subtitle: Eternity is a minimalist Hugo theme designed for portfolio sites with a fresh feel. # todo: change default subtitle for your website.
   copyright: All rights reserved. # todo: set your copyright type.
-  author: Lovely Author # todo: set your full name.
+  author: Perly # todo: set your full name.
   dontShowSource: false # please, do not do this :)
   portfolio:
     columns:
@@ -17,23 +17,16 @@ params:
         nature: 4
         archive: 6
         people: 2
+        objects: 3
         default: 3
       mobile:
         default: 2
         archive: 3
         people: 1
+        objects: 3
   socials:
     # todo: change these links.
-    - icon: 'far fa-envelope fa-lg'
-      url: 'mailto:eternity@bora.sh'
-      landing: true
-    - icon: 'fab fa-github fa-lg'
-      url: 'https://github.com/boratanrikulu/eternity'
-      landing: true
-    - icon: 'fab fa-instagram fa-lg'
-      url: 'https://instagram.bora.sh/eternity'
-    - icon: 'fab fa-linkedin-in fa-lg'
-      url: 'https://linkedin.bora.sh/in/eternity'
+    
   homepage: "/work" # homepage link, mostly same with menu.main[0]
   specialPages:
     - work
