--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: https://eternity.bora.sh # todo: change site url.
-title: Perly Web # todo: change site name.
+title: PERLY WEB # todo: change site name.
 defaultContentLanguage: 'en'
 theme: eternity
 googleAnalytics: '' # todo: set your analytics id.
