--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ googleAnalytics: '' # todo: set your analytics id.
 
 params:
   image: /images/banner.png
-  logo: ED_logo.png # todo: add your custom logo to static/
+ # logo: ED_logo.png todo: add your custom logo to static/
   subtitle: Eternity is a minimalist Hugo theme designed for portfolio sites with a fresh feel. # todo: change default subtitle for your website.
   copyright: All rights reserved. # todo: set your copyright type.
   author: Perly # todo: set your full name.
